# unnamed-space-game

./: .gitignore  README.md  design.md  game.db  game_design_document.MD  main.py  pyproject.toml  setup.sh
api/entities/: entity.py  planet.py
api/planet_generation/: generation.py
backend/: README.md  config.py  main.py  pyproject.toml
backend/src/: entities.py  map.py  players.py
backend/src/models/: player.py  player_sesssion_link.py  session.py
backend/src/routers/: player.py  session.py
backend/src/tables/: base.py  player.py  player_session_link.py  session.py
backend/src/utils/: auth.py  db.py
backend/unnamed_game/: game.py
backend/unnamed_game/src/: galaxy.py  player.py
backend/unnamed_game/src/entities/: entity.py  fleet.py  star.py
backend/unnamed_game/tests/unit/entities/: test_planet.py
backend/utils/: coordinator.py  instance.py
frontend/: .prettierrc.json  README.md  index.html  package-lock.json  package.json
frontend/src/: App.vue  config.json
frontend/src/assets/: main.css
frontend/src/components/: GameBoard.vue  GameDetailPanel.vue  GameList.vue  GameMap.vue  GameOverview.vue  GameSettings.vue  GameSidebarButton.vue  GameSidebarPanel.vue  LobbyDetail.vue  LobbyDialog.vue  LobbyOverview.vue
frontend/src/lib/: useApiClient.js  useSessionClient.js
unnamed_game/: fleets.py  galaxy.py  game.py  game_instance.py  player.py  players.py
unnamed_game/entities/: entity.py  fleet.py  planet.py  star.py
unnamed_game/src/: galaxy.py  group.py  party.py  player.py
unnamed_game_api/: unnamed_game.py
(+26 files in other folders)
